add new peculiarity